--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
