--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "pinia": "^2.1.3",
+    "tailwind-scrollbar": "^3.0.4",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
