--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "tailwind-scrollbar": "^3.0.4",
     "vue": "^3.2.47",
