--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.3",
     "tailwind-scrollbar": "^3.0.4",
